--- a/src/components/navBar.css
+++ b/src/components/navBar.css
@@ -1,7 +1,12 @@
 .navbar {
   background-color: white;
   color: #fff;
-  padding: 10px;
+  padding-top: 10px;
+
+  position: fixed;
+  z-index: 5;
+  min-width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .navbar-container {
@@ -10,12 +15,12 @@
   align-items: center;
   max-width: 100%;
   margin: 0 auto;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
 .navbar-logo {
   width: 130px;
   height: 100px;
+  margin-left: 30px;
 }
 
 .navbar-links {
@@ -33,7 +38,7 @@
 
 .navbar-links button:hover {
   background-color: rgba(0, 0, 0, 0.075);
-
+}
 .navbar-links a {
   text-decoration: none;
   color: #fff;
@@ -44,6 +49,16 @@
   color: #ff6600;
 }
 
+.shoppingcart {
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  background-color: white;
+  color: black;
+}
+.shoppingcart:hover {
+  background-color: rgba(0, 0, 0, 0.075);
+}
 /* Existing styles */
 
 .profile {
