--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -5,8 +5,43 @@
   align-items: center;
 }
 
-.emptyNoti {
-  margin-top: 50px;
+.cartItem {
+  width: 700px;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 25px;
+  margin: 30px;
+}
+
+.cartItem img {
+  width: 200px;
+}
+
+.cartItem .description {
+  width: 100%;
+  font-size: 30px;
+}
+
+.countHandler {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.countHandler input {
+  width: 40px;
+  text-align: center;
+  font-weight: bolder;
+}
+
+.countHandler button {
+  max-width: 35px;
+  background-color: white;
+  color: black;
+  border: solid 1px rgba(0, 0, 0, 0.2);
+  margin-bottom: 14px;
 }
 
 .checkout button {
