--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -8,7 +8,7 @@
   padding-bottom: 0px;
   padding-left: 0px;
   line-height: 20px;
-  color: white;
+  color: black;
   font-size: 14px;
   margin-top: 0px;
   margin-right: 0px;
@@ -26,7 +26,7 @@
   padding-left: 10px;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 0px;
+  margin-top: 50px;
   margin-right: auto;
   margin-bottom: 0px;
   margin-left: auto;
@@ -43,10 +43,10 @@
   background-attachment: initial;
   background-origin: initial;
   background-clip: initial;
-  background-color: #000000;
-  padding-top: 10px;
+  background-color: grey;
+  padding-top: 70px;
   padding-right: 20px;
-  padding-bottom: 10px;
+  padding-bottom: 45px;
   padding-left: 20px;
   margin: 0 0 0 0;
 }
@@ -223,5 +223,12 @@
 
   .responsive-container-block.leftSide {
     width: 100%;
+  }
+
+  .footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #333;
+    color: #fff;
   }
 }
